Fixed spacing and added photos to project placeholders

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,8 +26,7 @@ body {
 .flex-wrap {
     display: flex;
     flex-wrap: wrap;
-    /* width: 80%;
-    margin: auto; */
+    justify-content: space-between;
 }
 
 .section-title {
@@ -112,6 +111,11 @@ header nav ul li a {
     font-size: 2em;
 }
 
+header nav ul li a:hover {
+    color: var(--primary-color);
+    background-color: var(--tertiary-color);
+}
+
 
 
 /* About Section */
@@ -136,7 +140,7 @@ main {
 }
 
 .project {
-    width:47%;
+    width: 48%;
     height: 450px;
     border: solid black 1px;
     border-radius: 15px;
@@ -144,7 +148,13 @@ main {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    position: relative;
 }
+
+
+
+
+
 
 .project:first-child {
     width: 100%;
@@ -152,15 +162,36 @@ main {
 
 .project p {
     display: flex;
-    height: 35px;
+    height: 55px;
     width: 45%;
-    background-color: coral;
+    background-color: var(--primary-color);
+    color: var(--tertiary-color);
     justify-content: center;
     align-items: center;
     border-radius: 15px 0 15px 0;
+    font-weight: bolder;
+    font-size: 2em;
+    position: absolute;
+    z-index: 2;
+}  
+
+
+
+#project-1:hover p, 
+#project-2:hover p, 
+#project-3:hover p, 
+#project-4:hover p, 
+#project-5:hover p {
+    background-color: coral;
 }
 
-
+.project img {
+    border-radius: 15px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+}
 
 
 /* Contact Section*/
